Add closing paren for domain override label.

--- a/r2/r2/templates/promotelinkbase.html
+++ b/r2/r2/templates/promotelinkbase.html
@@ -128,7 +128,7 @@
       />
 
       <div class="infotext rounded">
-        <p>${_("Choose a different domain name to display on the site (the small grey text next to a link")}</p>
+        <p>${_("Choose a different domain name to display on the site (the small grey text next to a link)")}</p>
       </div>
     %endif
   </%utils:line_field>
