Keep midcol spacing for deleted/removed comments.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -2089,6 +2089,10 @@ a.star { text-decoration: none; color: #ff8b60 }
     }
 }
 
+.comment.deleted > .midcol {
+    visibility: hidden;
+}
+
 .comment .showreplies {
     display: block;
     margin-top: 7px;
