--- a/r2/r2/templates/utils/gold.html
+++ b/r2/r2/templates/utils/gold.html
@@ -24,20 +24,24 @@
 from r2.lib.strings import Score
 %>
 
-<%def name="gold_dropdown(what, chosen_months)">
+<%def name="gold_dropdown(what, chosen_months, somethings=None)">
+  <%
+    if not somethings:
+      somethings = what
+  %>
   <%!
     month_options = (1, 3)
     year_options = (1, 2, 3)
   %>
-  <select id="months" name="months" class="gold-dropdown">
+  <select id=${what} name=${what} class="gold-dropdown">
     %for i in month_options:
        <option value="${i}" ${"selected" if chosen_months == i else ""}>
-         ${unsafe(Score.somethings(i, what))}: ${g.gold_month_price * i}
+         ${unsafe(Score.somethings(i, somethings))}: ${g.gold_month_price * i}
        </option>
     %endfor
     %for i in year_options:
        <option value="${i * 12}" ${"selected" if (chosen_months == (i * 12) or (not chosen_months and i == 1)) else ""}>
-         ${unsafe(Score.somethings(i * 12, what))} &#32; (special price!): ${g.gold_year_price * i}
+         ${unsafe(Score.somethings(i * 12, somethings))} &#32; (special price!): ${g.gold_year_price * i}
        </option>
     %endfor
   </select>
