Don't hide report button for mods/admins

--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -51,7 +51,9 @@
         </li>
       %endif
     %endif
-  %elif thing.show_report:
+  %endif
+
+  %if thing.show_report:
     <li class="report-button">
       %if thing.style in ("linkbuttons", "commentbuttons"):
         <a href="javascript:void(0)" class="report-thing">
