Increase line-height for collapsed comments.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -2038,6 +2038,7 @@ a.star { text-decoration: none; color: #ff8b60 }
 
 .comment.collapsed {
     padding-bottom: 10px;
+    line-height: 14px;
 
     .numchildren {
         display: inline;
