Add a shield icon to indicate mod link submission override.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -663,6 +663,21 @@ ul.flat-vert {text-align: left;}
     display: none;
 }
 
+.submit.mod-override .morelink {
+    a:after {
+        background-image: url("../shield.png");
+        content: " ";
+        position: absolute;
+        height: 16px;
+        width: 16px;
+        margin: 7px;
+    }
+
+    &:hover a:after {
+        opacity: 0.5;
+    }
+}
+
 .sidebox .subtitle {
     margin-left: 10px;
     color: dimgray;
