Add Twitter Card support
[Twitter Cards][0] are little snippets of information that get displayed in
Twitter's feed when a message includes a link.  This pull adds a few meta tags
to enable this, similar to reddit/reddit@027504a's work for Facebook.

While there is [a Twitter Cards validator][1], it requires pulling the page
itself, which makes this difficult to test.  We also have to make sure to run
it through the validator to get approval before it goes live; it's unclear if
this acceptance process is automated.  The code that adds the Card is protected
by a feature flag to help with this.

There are [some restrictions][2] on filesize for images, but I don't
think we want to deal with that one, at least not yet.

[0]: https://dev.twitter.com/cards/overview
[1]: https://cards-dev.twitter.com/validator
[2]: https://dev.twitter.com/cards/markup

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -79,6 +79,12 @@
     %endfor
   %endif
 
+  %if hasattr(thing, "twitter_card"):
+    %for (twitter_card_property, twitter_card_value) in thing.twitter_card.iteritems():
+      <meta property="twitter:${twitter_card_property}" content="${twitter_card_value}">
+    %endfor
+  %endif
+
   <link rel='icon' href="${static('icon.png')}" sizes="256x256" type="image/png" />
   <link rel='shortcut icon' href="${static('favicon.ico')}" type="image/x-icon" />
   <link rel='apple-touch-icon-precomposed' href="${static('icon-touch.png')}" />
